src/interceptor/test/docker-compose.yml
services:
  envoy:
    build:
      context: ../
      dockerfile: test/Dockerfile.envoy
    ports:
      - "15001:15001"
      - "15000:15000"
    depends_on:
      - test_backend

  test_backend:
    image: nginx:alpine
    volumes:
      - ./nginx.conf:/etc/nginx/nginx.conf:ro
    expose:
      - "3000"

  test_runner:
    build:
      context: ../
      dockerfile: test/Dockerfile.test
    depends_on:
      - envoy
      - test_backend
    environment:
      - DOCKER_TEST=true
    volumes:
      - ./checker:/app/checker:ro
    profiles:
      - test
