src/interceptor/test/envoy.yaml
static_resources:
  listeners:
  - name: http_in
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 15001
    listener_filters:
    - name: envoy.filters.listener.tls_inspector
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector

    filter_chains:
    - filter_chain_match:
        transport_protocol: tls
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
          common_tls_context:
            tls_certificates:
            - certificate_chain: { filename: /etc/envoy/tls/cert.pem }
              private_key: { filename: /etc/envoy/tls/key.pem }
      filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: https
          generate_request_id: true

          http_filters:
          - name: envoy.filters.http.wasm
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
              config:
                name: interceptor
                vm_config:
                  vm_id: interceptor_https_vm
                  runtime: envoy.wasm.runtime.v8
                  environment_variables:
                    key_values:
                      CTF_PROXY_IS_HTTP: "1"
                  code:
                    local:
                      filename: /etc/envoy/wasm/interceptor.wasm
                  allow_precompiled: true

          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              suppress_envoy_headers: true

          route_config:
            name: all
            virtual_hosts:
            - name: https_backend
              domains: ["*"]
              routes:
              - match: { prefix: "/" }
                route:
                  cluster: https_backend
                  timeout: 30s

    default_filter_chain:
      filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: hcm
          generate_request_id: true

          http_filters:
          - name: envoy.filters.http.wasm
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
              config:
                name: interceptor
                vm_config:
                  vm_id: interceptor_http_vm
                  runtime: envoy.wasm.runtime.v8
                  environment_variables:
                    key_values:
                      CTF_PROXY_IS_HTTP: "1"
                  code:
                    local:
                      filename: /etc/envoy/wasm/interceptor.wasm
                  allow_precompiled: true

          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              suppress_envoy_headers: true

          route_config:
            name: all
            virtual_hosts:
            - name: test_backend
              domains: ["*"]
              routes:
              - match: { prefix: "/" }
                route:
                  cluster: test_backend
                  timeout: 30s

  - name: tcp_in
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 15002

    filter_chains:
    - filters:
      - name: envoy.filters.network.wasm
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.wasm.v3.Wasm
          config:
            name: interceptor
            vm_config:
              vm_id: interceptor_tcp_vm
              runtime: envoy.wasm.runtime.v8
              environment_variables:
                key_values:
                  CTF_PROXY_IS_TCP: "1"
              code:
                local:
                  filename: /etc/envoy/wasm/interceptor.wasm
              allow_precompiled: true
      - name: envoy.filters.network.tcp_proxy
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          stat_prefix: tcp
          cluster: tcp_backend

  clusters:
  - name: test_backend
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: test_backend
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: test_backend
                port_value: 3000

  - name: tcp_backend
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: tcp_backend
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: tcp_backend
                port_value: 3000

  - name: https_backend
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    typed_extension_protocol_options:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        upstream_http_protocol_options:
          auto_sni: true
        explicit_http_config:
          http_protocol_options: {}
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
    load_assignment:
      cluster_name: https_backend
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: https_backend
                port_value: 443

admin:
  address:
    socket_address: { address: 0.0.0.0, port_value: 15000 }
